ProChipJoystick/log/ProChipJoystickApp_log_200302_142114.txt
2020-03-02T14:21:15|CRITICAL|root|Unhandled exception:Traceback (most recent call last):
  File "C:\LabPrograms\Python\ProChipJoystick\ProChipJoystickApp.py", line 21, in <module>
    app = ProChipJoystickApp(sys.argv)
  File "C:\LabPrograms\Python\BaseMicroscopeModified_ScopeFoundry\BaseMicroscopeAppModified.py", line 16, in __init__
    super().__init__(*kwds) # *kwds is needed since in the main we pass as argument sys.argv. Without
  File "C:\ProgramData\Anaconda3\lib\site-packages\ScopeFoundry\base_app.py", line 332, in __init__
    self.setup()
  File "C:\LabPrograms\Python\ProChipJoystick\ProChipJoystickApp.py", line 13, in setup
    from ProChipJoystick.SyncreadoutTriggerJoystickCounterMeasurement import SyncreadoutTriggerJoystickCounterMeasurement
  File "C:\LabPrograms\Python\ProChipJoystick\SyncreadoutTriggerJoystickCounterMeasurement.py", line 144
    dset = f_cell_list.create_dataset("counter measure",(4,)))
                                                             ^
SyntaxError: invalid syntax

